# invoice-etl

./: .env.example  .gitignore  README.md  docker-compose.yml  inspect_pdf.py  pyproject.toml
.claude/: settings.json
.claude/agent-memory/prd-feature/: MEMORY.md  project_push_down_pattern.md
.claude/agent-memory/task-researcher/: MEMORY.md  project_push_down_claude_dir.md
.claude/agents/: atomic-executor.md  atomic-planner.md  csharp-typed-engineer.md  epic-review.md  feature-review.md  orchestrator.md  powershell-typed-engineer.md  prd-feature.md  staged-review.md  status-updater.md  task-researcher.md
.claude/hooks/: enforce-promotion-mcp-only.ps1  validate-feature-review-coverage.ps1
.claude/rules/: csharp.md  general-code-change.md  general-unit-test.md  powershell.md  python.md  typescript.md
.claude/skills/atomic-plan-contract/: SKILL.md
.claude/skills/csharp-qa-gate/: SKILL.md
.claude/skills/execute-hard-lock/: SKILL.md
.claude/skills/feature-promotion-lifecycle/: SKILL.md
.claude/skills/feature-review-workflow/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/policy-audit-template-usage/: SKILL.md
.claude/skills/powershell-qa-gate/: SKILL.md
.claude/skills/pr-base-branch-merge-base/: SKILL.md
.claude/skills/python-qa-gate/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: atomic_planning.agent.md  commentary-remediation.agent.md  feature-review.agent.md  orchestrator.agent.md  python-atomic-executor.agent.md  python-orchestrator.agent.md  staged-review.agent.md
.github/instructions/: python-suppressions.instructions.md  python-unit-test.instructions.md
.github/prompts/: remediate-comments.prompt.md
.github/workflows/: ci.yml
docker/: init.sql
src/invoice_etl/: __init__.py  main.py
src/invoice_etl/extract/: __init__.py  (+1 more)
tests/: test_extract.py  test_load.py  test_main.py  test_transform.py
(+75 files in other folders)
